# earth-satellites-visualizer

./: CMakeLists.txt  README.md
assets/: README.md  Sun.glb
shaders/: earth.vert  orbit.frag  orbit.vert  sats.frag  sats.vert  sun.frag  sun.vert
src/: Camera.cpp  Camera.h  Conjunction.cpp  Conjunction.h  GltfModel.cpp  GltfModel.h  Mesh.cpp  Mesh.h  OrbitLine.cpp  OrbitLine.h  OrbitSim.cpp  OrbitSim.h  PassPredictor.cpp  PassPredictor.h  Sgp4System.cpp  Sgp4System.h  Shader.cpp  Shader.h  Sphere.cpp  Sphere.h  Texture.cpp  Texture.h  TleLoader.cpp  TleLoader.h  main.cpp
src/shaders/: earth.frag
